--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   margin: 0;
   display: flex;
   place-items: center;
@@ -41,4 +42,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-} */
+}
