--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,18 @@
+@font-face {
+  font-family: Roboto;
+  src: url(../public/fonts/Roboto-Regular.ttf);
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+body {
+  font-family: Roboto;
+}
+
+.active {
+  color: white !important;
 }
