--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -1,11 +1,24 @@
 .containernavbar {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
-  height: 100px;
-  background-color: grey;
+  height: 50px;
+  font-size: 1rem;
+  background: #222;
 }
 
+.containernavbar a {
+  color: #bbb;
+  text-decoration: none;
+  font-size: 1rem;
+  padding: 0px 1rem;
+  transition: 0.5s;
+}
+
+.titlecont a:hover {
+  color: #66cc66;
+  text-decoration: none;
+}
 
 .leftcont {
   display: flex;
@@ -18,30 +31,55 @@
   margin-right: 25px;
 }
 
+.containernavbar h3 span {
+  color: #ff416c;
+  display: inline-block;
+  /* font-size: 1.4rem; */
+  transform: rotate(-20deg);
+  margin-right: 0.5rem;
+}
+
 .title {
   font-size: 30px;
 }
 
-.coursecont, .couchcont {
+.coursecont,
+.couchcont {
   display: flex;
   justify-content: center;
   align-items: center;
   margin-right: 25px;
 }
 
-.course, .couching {
+.course,
+.couching {
   font-size: 20px;
 }
 
 .rightcont {
   display: flex;
+  padding-right: 1rem;
+}
+
+.rightcont a {
+  border: 1px solid rgba(94, 94, 94, 0.6);
+  background: none;
+  padding: 4px 15px;
+  border-radius: 5px;
+  color: #fff;
+}
+
+.rightcont a:hover {
+  border-color: #666;
 }
 
 .signincont {
   margin-right: 35px;
 }
 
-.title, .course, .couching {
+.title,
+.course,
+.couching {
   cursor: pointer;
   background: none;
   border: none;
@@ -58,13 +96,13 @@
   cursor: pointer;
   height: 35px;
   width: 150px;
-  border: solid 2px rgba(255,255,255, 0.4);
+  border: solid 2px rgba(255, 255, 255, 0.4);
   border-radius: 10px;
   transition: 1s;
 }
 
 .authcont:hover {
-  border: solid 2px rgba(255,255,255, 1);
+  border: solid 2px rgba(255, 255, 255, 1);
   transition: 1s;
 }
 
