--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,6 +13,19 @@ body {
   font-family: Roboto;
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
 .active {
   color: white !important;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
 }
