--- a/client/src/components/CardCourse/CardCourse.module.css
+++ b/client/src/components/CardCourse/CardCourse.module.css
@@ -4,8 +4,9 @@
   flex-direction: column;
   justify-content: baseline;
   padding: 1.2rem 1rem;
-  width: 350px;
+
   font-size: 0.8rem;
+  /* background: red; */
 }
 
 .course-cards h3 {
@@ -15,7 +16,9 @@
 .main-link {
   text-decoration: none;
   border-radius: 1rem;
-  box-shadow: 0 0 4px 0 #ddd;
+  display: block;
+  width: 350px;
+  box-shadow: 0 0 4px -1px #bfb9b9;
 }
 .main-link,
 a {
