--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -5,6 +5,9 @@
   height: 50px;
   font-size: 1rem;
   background: #222;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
 }
 
 .containernavbar a {
