--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,7 +26,7 @@ body {
 main {
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   flex: 1;
   margin-top: 50px;
 }
