--- a/client/src/components/Course/Course.module.css
+++ b/client/src/components/Course/Course.module.css
@@ -1,3 +1,7 @@
+.coursecontainer {
+  display: flex;
+}
+
 .leftcont {
   display: flex;
   justify-content: flex-start;
@@ -16,7 +20,37 @@
 }
 
 .btnpubliccont {
-  margin: 25px 0 0 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  width: 175px;
+  height: 35px;
+  border: solid 1px rgba(34,34,34, 0.7);
+  transition: 0.3s;
+  border-radius: 5px;
+  margin: 25px 0 25px 0;
+}
+
+.btnpubliccont:hover {
+  border: solid 1px rgba(34,34,34, 1);
+  transition: 0.3s;
+}
+
+.btnpubliccourse {
+  cursor: pointer;
+  border: none;
+  outline: none;
+  width: 175px;
+  height: 35px;
+  background: none;
+  color: rgba(34,34,34, 0.8);
+  font-size: 16px;
+}
+
+.btnpubliccourse:hover {
+  color: rgba(34,34,34, 1);
+  transition: 0.3s;
 }
 
 .btnlist {
