--- a/client/src/components/Course/Info/Info.module.css
+++ b/client/src/components/Course/Info/Info.module.css
@@ -20,6 +20,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   border: solid 1px rgba(0, 0, 0, 0.5);
   border-radius: 5px;
   width: 140px;
@@ -34,7 +35,10 @@
 }
 
 .btnrefcheckpromo {
-  font-weight: bold;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
   width: 140px;
   height: 40px;
