--- a/client/src/components/LearnPageComponents/LearnNavbar/LearnNavbar.module.css
+++ b/client/src/components/LearnPageComponents/LearnNavbar/LearnNavbar.module.css
@@ -134,6 +134,20 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background: #f8e45d;
+  border: 2px solid #fff;
+  border-radius: 5px;
+  padding: 0 !important;
+}
+
+.step-box-progress {
+  position: relative;
+  width: 26px;
+  height: 26px;
+  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background: #66cc66;
   border: 2px solid #fff;
   border-radius: 5px;
