--- a/client/src/components/LearnPageComponents/LearnTextComponent/LearnTextComponent.module.css
+++ b/client/src/components/LearnPageComponents/LearnTextComponent/LearnTextComponent.module.css
@@ -28,6 +28,12 @@
   margin: 0 auto;
 }
 
+.button-fragment {
+  display: flex;
+  gap: 1rem;
+  justify-content: right;
+}
+
 .button-next {
   cursor: pointer;
   font-size: 1rem;
