--- a/client/src/components/Course/InfoEdit/InfoEdit.module.css
+++ b/client/src/components/Course/InfoEdit/InfoEdit.module.css
@@ -5,12 +5,58 @@
 
 .notextcontent {
   display: flex;
+  flex-direction: column;
   margin: 0 0 25px 0;
+}
+
+.inpscont {
+  display: flex;
+}
+
+.imgtitle, .videotitle {
+  margin: 5px;
+}
+
+.ifbtn {
+  display: flex;
+  align-items: center;
 }
 
 .inpimg, .inpvideo {
   display: flex;
   flex-direction: column;
+  margin: 0 35px 0 0;
+}
+
+.imgres {
+  margin: 10px
+}
+
+.btndelinpimg {
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background: none;
+  font-size: 25px;
+  width: 25px;
+  height: 25px;
+}
+
+.custom-file-input {
+  display: inline-block;
+  padding: 8px 12px;
+  font-size: 14px;
+  cursor: pointer;
+  border: solid 1px rgba(157,36,63, 0.8);
+  color: rgba(157,36,63, 0.8);
+  transition: 0.3s;
+  border-radius: 5px;
+}
+
+.custom-file-input:hover {
+  border: solid 1px rgba(157,36,63, 1);
+  color: rgba(157,36,63, 1);
+  transition: 0.3s;
 }
 
 .inputvideo {
