--- a/client/src/Pages/Promo/Promo.module.css
+++ b/client/src/Pages/Promo/Promo.module.css
@@ -11,6 +11,7 @@
 .main-promo section {
   display: flex;
   gap: 4rem;
+  justify-content: space-around;
   margin: 0 auto;
   max-width: 1024px;
   margin-top: 4rem;
@@ -253,7 +254,6 @@ section article:nth-child(2) p {
   border: 1px solid #288b28;
 }
 
-
 .footerpromopage {
   display: flex;
   justify-content: center;
@@ -277,17 +277,15 @@ section article:nth-child(2) p {
   margin: 25px 0 25px 0;
 }
 
-
-
 /* modal save window */
 
 .modal {
   padding: 10px;
-  border: solid 1px rgba(34,34,34, 1);
+  border: solid 1px rgba(34, 34, 34, 1);
   border-radius: 5px;
   position: fixed;
   right: 20px;
-  color: rgba(34,34,34, 1);
+  color: rgba(34, 34, 34, 1);
   transition: 1s;
   opacity: 0;
 }
