--- a/client/src/components/CardCourse/CardCourse.module.css
+++ b/client/src/components/CardCourse/CardCourse.module.css
@@ -23,13 +23,13 @@ a {
   margin-bottom: 0.7rem;
 }
 
-
 .text a:hover {
   text-decoration: underline;
 }
 
 .top-block {
   display: flex;
+  gap: 1rem;
   margin-bottom: 55px;
 }
 
@@ -84,7 +84,7 @@ a {
 }
 
 .withoutsale {
-  color : #6c7bdf;
+  color: #6c7bdf;
   font-weight: bold;
 }
 
@@ -92,7 +92,6 @@ a {
   font-weight: bold;
   width: 205px;
   word-break: break-all;
-  
 }
 
 .cardcontainer {
