--- a/client/src/components/MyTeachingComponents/MenuMyTeaching/MenuMyTeaching.module.css
+++ b/client/src/components/MyTeachingComponents/MenuMyTeaching/MenuMyTeaching.module.css
@@ -1,35 +1,25 @@
-/* MenuMyTeaching.module.css */
-
-.menu-container {
-  background-color: #333;
-  padding: 10px;
-  margin-bottom: 30px; /* Добавлено свойство margin-bottom для создания пробела */
+.mymenucontainer {
+  display: flex;
+  flex-direction: column;
+  width: 150px;
 }
 
-.menu-list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.menu-link {
+.textrefto {
   text-decoration: none;
+  font-weight: bold;
+
 }
 
-.menu-button {
-  background-color: #4CAF50;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
+.mycoursecontainer {
   cursor: pointer;
-  border-radius: 5px;
+  display: flex;
+  text-decoration: none;
 }
 
-.menu-button:hover {
-  background-color: #45a049;
+.icon {
+  margin: 0 10px 0 0;
+}
+
+.mycoursecontainer.act {
+  color: green;
 }
