--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -37,7 +37,7 @@
 .containernavbar h3 span {
   color: #ff416c;
   display: inline-block;
-  /* font-size: 1.4rem; */
+  font-size: 1.2rem;
   transform: rotate(-20deg);
   margin-right: 0.5rem;
 }
