--- a/client/src/components/CardCourse/CardCourse.module.css
+++ b/client/src/components/CardCourse/CardCourse.module.css
@@ -37,13 +37,13 @@ a {
   display: flex;
   flex-direction: column;
 }
-.course-cards img {
+/* .course-cards img {
   top: 0;
   right: 0;
   width: 72px;
   height: 72px;
   margin-left: 1rem;
-}
+} */
 
 .widgets i {
   font-size: 12px;
@@ -107,6 +107,7 @@ a {
 }
 
 .cardimg {
+  box-shadow: 0 0 4px -1px #bfb9b9;
   width: 72px;
   height: 72px;
 }
