--- a/client/src/components/MyLearnComponents/MenuMyLearn.module.css
+++ b/client/src/components/MyLearnComponents/MenuMyLearn.module.css
@@ -2,6 +2,11 @@
   background: #fcfcfc;
   padding: 1rem;
   font-size: 0.9rem;
+  min-width: 250px;
+}
+
+.active {
+  color: #288b28 !important;
 }
 
 .nav ul {
