--- a/client/src/components/Course/Course.module.css
+++ b/client/src/components/Course/Course.module.css
@@ -17,6 +17,9 @@
 .coursetitle {
   margin: 25px 0 0 0;
   font-size: 20px;
+  width: 200px;
+  overflow-wrap: break-word;
+  white-space: normal;
 }
 
 .btnpubliccont {
@@ -26,14 +29,14 @@
   padding: 10px;
   width: 175px;
   height: 35px;
-  border: solid 1px rgba(34,34,34, 0.7);
+  border: solid 1px rgba(34, 34, 34, 0.7);
   transition: 0.3s;
   border-radius: 5px;
   margin: 25px 0 25px 0;
 }
 
 .btnpubliccont:hover {
-  border: solid 1px rgba(34,34,34, 1);
+  border: solid 1px rgba(34, 34, 34, 1);
   transition: 0.3s;
 }
 
@@ -44,18 +47,17 @@
   width: 175px;
   height: 35px;
   background: none;
-  color: rgba(34,34,34, 0.8);
+  color: rgba(34, 34, 34, 0.8);
   font-size: 16px;
 }
 
 .btnpubliccourse:hover {
-  color: rgba(34,34,34, 1);
+  color: rgba(34, 34, 34, 1);
   transition: 0.3s;
 }
 
-
 .imgcourse {
-  width: 52px;
+  width: 128px;
 }
 
 .btnlist {
@@ -81,7 +83,8 @@
   width: 100vh;
 }
 
-.mainli, .podli {
+.mainli,
+.podli {
   position: relative;
   list-style-type: none;
 }
