--- a/client/src/components/Course/InfoEdit/InfoEdit.module.css
+++ b/client/src/components/Course/InfoEdit/InfoEdit.module.css
@@ -83,46 +83,9 @@
   height: 35px;
 }
 
-.categoriescontainer {
-  margin: 0 0 25px 0;
-}
-
-.categorytitle, .shortdescriptitle, .longdescriptitle, .timetitle {
+ .shortdescriptitle, .longdescriptitle, .timetitle, .pricetitle {
   margin: 0 0 10px 0;
   font-weight: bold;
-}
-
-.btntakecont {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 200px;
-  height: 35px;
-  border: solid 1px rgba(157,36,63, 0.8);
-  border-radius: 5px;
-  transition: 0.3s;
-}
-
-.btntakecont:hover {
-  border: solid 1px rgba(157,36,63, 1);
-  transition: 0.3s;
-}
-
-.btntakecat {
-  cursor: pointer;
-  width: 200px;
-  height: 35px;
-  border: none;
-  outline: none;
-  background: none;
-  font-weight: bold;
-  color: rgba(157,36,63, 0.8);
-  transition: 0.3s;
-}
-
-.btntakecat:hover {
-  color: rgba(157,36,63, 1);
-  transition: 0.3s;
 }
 
 .shortdescripcont {
@@ -253,4 +216,16 @@
   opacity: 1;
   transition: 1s;
   transform: translateY(-25px);
+}
+
+.pricecont {
+  margin: 0 0 25px 0;
+}
+
+
+.inpprice {
+  border-radius: 5px;
+  padding: 5px;
+  width: 250px;
+  height: 35px;
 }
