--- a/client/src/components/MyTeachingComponents/CardCourseAuthor/CardCourseAuthor.module.css
+++ b/client/src/components/MyTeachingComponents/CardCourseAuthor/CardCourseAuthor.module.css
@@ -101,3 +101,34 @@
 .polocka {
   border-bottom: solid 1px rgba(0, 0, 0, 0.3);
 }
+
+/* price */
+
+.price {
+  display: flex;
+  margin: 15px 0 0 0;
+}
+
+.last-price {
+  margin: 0 5px 0 0;
+  font-size: 12px;
+  text-decoration: line-through;
+  color: #6c7bdf;
+}
+
+.actual-price {
+  color: #ff7965;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.withoutsale {
+  color : #6c7bdf;
+  font-weight: bold;
+}
+
+.free-price {
+  font-size: 14px;
+  font-weight: bold;
+  color: #6c6;
+}
