--- a/client/src/components/LearnPageComponents/LearnTextComponent/LearnTextComponent.module.css
+++ b/client/src/components/LearnPageComponents/LearnTextComponent/LearnTextComponent.module.css
@@ -15,6 +15,10 @@
   margin: 0 auto;
 }
 
+.body-content ul {
+  margin: 1rem 0 1rem 3rem;
+}
+
 .footer-fragment {
   background: #f3f4f6;
   flex-grow: 1;
