--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -35,6 +35,7 @@
 }
 
 .containernavbar h3 span {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   color: #ff416c;
   display: inline-block;
   font-size: 1.2rem;
