--- a/client/src/components/MyTeachingComponents/Searchv3/Search.module.css
+++ b/client/src/components/MyTeachingComponents/Searchv3/Search.module.css
@@ -41,10 +41,10 @@
 
 .btnsearchcont {
   margin: 0 0 0 10px;
-
 }
 
 .btnsearch {
+  cursor: pointer;
   border: none;
   outline: none;
   background-color: none;
