--- a/client/src/Pages/Promo/Comment/Comment.module.css
+++ b/client/src/Pages/Promo/Comment/Comment.module.css
@@ -14,14 +14,13 @@
   opacity: 0.7;
 }
 
-
-.commentrate {
-  display: flex;
+.contenttitle {
+  overflow-wrap: break-word;
 }
 
 
-.btncheckmorecont {
-
+.commentrate {
+  display: flex;
 }
 
 .btncheckmorecont {
@@ -39,4 +38,9 @@
   text-align: center;
   color: rgba(0,0,255, 0.7);
   text-decoration: underline;
+}
+
+.userscoreratecont {
+  font-size: 15px;
+  margin: 5px 0 0 0;
 }
