--- a/client/src/Pages/Promo/Promo.module.css
+++ b/client/src/Pages/Promo/Promo.module.css
@@ -273,6 +273,10 @@ section article:nth-child(2) p {
   margin: 0 0 25px 0;
 }
 
+.yourcomtitle {
+  font-size: 28px;
+}
+
 .percommentcont {
   margin: 25px 0 25px 0;
 }
@@ -300,4 +304,53 @@ section article:nth-child(2) p {
   opacity: 1;
   transition: 1s;
   transform: translateY(-25px);
+}
+
+
+.cominp {
+  padding: 15px;
+  font-size: 15px;
+  width: 400px;
+  height: 75px;
+}
+
+.yourscorerate {
+  margin: 0 5px 0 0;
+}
+
+.containerscoreinp {
+  display: flex;
+  align-items: center;
+  margin: 10px 0 10px 0;
+}
+
+.yourratecom {
+  padding: 5px;
+  width: 100px;
+}
+
+.yourcomcontainer {
+  display: flex;
+  flex-direction: column;
+  margin: 35px 0 35px 0;
+}
+
+.btnsendcom {
+  cursor: pointer;
+  margin: 25px 0 0 0;
+  width: 200px;
+  border: solid 1px rgba(157,36,63, 0.8);
+  color: rgba(157,36,63, 0.8);
+  border-radius: 5px;
+  outline: none;
+  background: none;
+  height: 35px;
+  transition: 0.3s;
+  font-size: 18px;
+}
+
+.btnsendcom:hover {
+  border: solid 1px rgba(157,36,63, 1);
+  color: rgba(157,36,63, 1);
+  transition: 0.3s;
 }
