--- a/client/src/components/MyTeachingComponents/MenuMyTeaching/MenuMyTeaching.module.css
+++ b/client/src/components/MyTeachingComponents/MenuMyTeaching/MenuMyTeaching.module.css
@@ -14,6 +14,7 @@
   cursor: pointer;
   display: flex;
   text-decoration: none;
+  margin: 0 0 15px 0;
 }
 
 .icon {
@@ -22,4 +23,15 @@
 
 .mycoursecontainer.act {
   color: green;
+}
+
+.moreinforef {
+  display: flex;
+  text-decoration: none;
+  font-weight: bold;
+  margin: 0 0 15px 0;
+}
+
+.moreinfoconstruct {
+  text-decoration: none;
 }
