--- a/client/src/components/ButtonProfile/ButtonProfile.module.css
+++ b/client/src/components/ButtonProfile/ButtonProfile.module.css
@@ -17,6 +17,20 @@
   font-size: 0.8rem;
 }
 
+.button-icon-two {
+  cursor: pointer;
+  width: 2.3rem;
+  height: 2.3rem;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  /* font-weight: bold; */
+  letter-spacing: 1px;
+  font-size: 0.8rem;
+}
+
 .dropdown-menu {
   position: absolute;
   background: #222;
@@ -58,4 +72,16 @@
   color: #5aa95a;
   background: #333;
   transition: 0s;
+}
+
+.imgprofile {
+  width: 38px;
+  border-radius: 50%;
+  border: 1px solid #bbb;
+}
+
+.imgletter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
